2000-09-19  Jeff Hobbs  <hobbs@scriptics.com>

	* tkcon.tcl: updated v2.0 to v2.1 alpha version
	All tkcon procedures have been namespaced, except for the ones
	that are visible to the user.  TkCon has added the ability to
	attach to other displays or a socket.

	* tkcon.tcl: updated v1.6 to v2.0 version, tagged tkcon-2-0
	This is the first version to require 8.0+ to run, although it
	will still connect to older interps.

	* tkcon.tcl: updated v1.5 to v1.6 version, tagged tkcon-1-6
	* tkcon.tcl: updated v1.4 to v1.5 version, tagged tkcon-1-5
	* tkcon.tcl: updated v1.3 to v1.4 version, tagged tkcon-1-4
	* tkcon.tcl: updated v1.2 to v1.3 version, tagged tkcon-1-3
	* tkcon.tcl: updated v1.1 to v1.2 version, tagged tkcon-1-2
	* tkcon.tcl: updated v1.03 to v1.1 version, tagged tkcon-1-1
	* tkcon.tcl: updated v1.02 to v1.03 version, tagged tkcon-1-03
	* tkcon.tcl: updated v0.71 to v1.02 version, tagged tkcon-1-02
	* tkcon.tcl: updated v0.69 to v0.71 version, tagged tkcon-0-71
	* tkcon.tcl: updated v0.68 to v0.69 version, tagged tkcon-0-69
	* tkcon.tcl: updated v0.67 to v0.68 version, tagged tkcon-0-68
	* tkcon.tcl: updated v0.66 to v0.67 version, tagged tkcon-0-67
	* tkcon.tcl: updated v0.65 to v0.66 version, tagged tkcon-0-66
	* tkcon.tcl: updated v0.64 to v0.65 version, tagged tkcon-0-65
	* tkcon.tcl: updated v0.63 to v0.64 version, tagged tkcon-0-64
	* tkcon.tcl: updated v0.52 to v0.63 version, tagged tkcon-0-63

	* ChangeLog: added a ChangeLog